--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "contao/core-bundle": "^4.13"
+        "contao/core-bundle": "^4.13 || ^5.1"
     },
     "require-dev": {
         "contao/manager-bundle": "^4.13.1",
