--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,14 @@
             "homepage": "https://plenta.io"
         }
     ],
+    "version": "1.0.6",
     "require": {
         "php": "^8.1",
         "ext-json": "*",
-        "contao/core-bundle": "^4.13 || ^5.1"
+        "contao/core-bundle": "^5.1"
     },
     "require-dev": {
-        "contao/manager-bundle": "^4.13.1 || 5.1",
-        "phpunit/phpunit": "^9.5.10",
-        "contao/test-case": "^4.4.0",
-        "symfony/phpunit-bridge": "v5.3.8",
+        "contao/manager-bundle": "^5.7",
         "friendsofphp/php-cs-fixer": "^3.2"
     },
     "extra": {
